--- a/doc/changes/DM-44513.misc.rst
+++ b/doc/changes/DM-44513.misc.rst
@@ -1,1 +1,1 @@
-change the defult memory to 4000 and the default memoryMultipler to 1.5
+remove requestMemory, memoryMultipler and numberOfRetries from bps_panda which are defined in bps
