updates based on comments

--- a/doc/changes/DM-38177.feature.rst
+++ b/doc/changes/DM-38177.feature.rst
@@ -1,1 +1,1 @@
-updates to support event service
+Updated to support event service which allows multiple short payload jobs to run in a single PanDA job for efficiency.
