Addressed the docstring and idds client function call ments from the PR review

--- a/doc/changes/DM-52866.feature.rst
+++ b/doc/changes/DM-52866.feature.rst
@@ -1,1 +1,1 @@
-Update bps report function to aggregate panda task slices into task labels
+Update "bps report" function to aggregate panda task slices into task labels
