Switch docs action to use ``sphinxutils``.

--- a/doc/changes/DM-54031.misc.rst
+++ b/doc/changes/DM-54031.misc.rst
@@ -1,1 +1,1 @@
-Removed unused ``isort`` and ``black`` sections from ``pyproject.toml``.  Bumped minimum Python version to 3.12.
+Removed unused ``isort`` and ``black`` sections from ``pyproject.toml``.  Bumped minimum Python version to 3.12. Switched docs action to use ``sphinxutils``.
